pattern-matching main function

--- a/features/pattern_matching.ipynb
+++ b/features/pattern_matching.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 82,
+   "execution_count": 88,
    "id": "2cf187d1",
    "metadata": {},
    "outputs": [],
@@ -63,7 +63,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 89,
    "id": "43cf0176",
    "metadata": {},
    "outputs": [],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 90,
    "id": "fc25f14d",
    "metadata": {},
    "outputs": [],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 91,
    "id": "81ab6798",
    "metadata": {},
    "outputs": [],
@@ -161,7 +161,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 92,
    "id": "7650271c",
    "metadata": {},
    "outputs": [],
@@ -201,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 104,
+   "execution_count": 93,
    "id": "cab7cd11",
    "metadata": {},
    "outputs": [],
@@ -238,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "4558ec7d",
    "metadata": {},
    "outputs": [],
@@ -317,7 +317,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 106,
+   "execution_count": 95,
    "id": "8b2fe87f",
    "metadata": {},
    "outputs": [],
@@ -348,7 +348,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 105,
+   "execution_count": 96,
    "id": "077ef89f",
    "metadata": {},
    "outputs": [],
@@ -407,7 +407,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 97,
    "id": "81a97901",
    "metadata": {},
    "outputs": [],
@@ -417,12 +417,12 @@
     "    Classifies object columns and applies appropriate conversion.\n",
     "    \"\"\"\n",
     "    col_types = classify_object_columns(df,patterns)\n",
+    "    all_errors = {}\n",
     "    if not col_types:\n",
     "        print(\"No patterns detected\")\n",
-    "        return df, {}, {}\n",
+    "        return df, all_errors\n",
     "\n",
     "    print(\"Classified columns, Attempting Inital conversion\")\n",
-    "    all_errors = {}\n",
     "    for col, col_type in col_types.items():\n",
     "        if col_type in {'multiselect, multiselect_structured'}:\n",
     "            pass \n",
@@ -447,12 +447,12 @@
     "            all_errors[col_key]['errors'] = errors\n",
     "            all_errors[col_key]['type'] = col_type\n",
     "    print(\"Initial conversion attempt completed\")\n",
-    "    return df, all_errors, col_types"
+    "    return df, all_errors"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 92,
+   "execution_count": 131,
    "id": "46717c0f",
    "metadata": {},
    "outputs": [],
@@ -480,8 +480,6 @@
     "    Example:\n",
     "    df['Age'] = df['Age'].replace({'Under 18': 17, '65+': 70}).infer_objects(copy=False)\n",
     "    print('LLM: Assumed 17 for Under 18 and 70 for 65+ in Age column')\n",
-    "\n",
-    "    IMPORTANT: Always chain .infer_objects(copy=False) directly after .replace() in the same line\n",
     "    \n",
     "    ONLY GENERATE VALID PYTHON CODE (no markdown blocks, no explanations)\n",
     "    \"\"\"\n",
@@ -509,7 +507,7 @@
     "    \n",
     "    try:\n",
     "        original_df = df.copy()\n",
-    "        namespace = {\"df\": original_df, \"pd\": pd, \"np\": np}\n",
+    "        namespace = {\"df\": df, \"pd\": pd, \"np\": np}\n",
     "        exec(generated_code, namespace)\n",
     "        df = namespace[\"df\"]\n",
     "        return df\n",
@@ -532,10 +530,9 @@
     "    1. Classifies and converts object columns.\n",
     "    2. Uses LLM to fix remaining errors.\n",
     "    3. Checks which columns are still object dtype.\n",
-    "    Returns: (df, failed_cols, all_errors, col_types)\n",
     "    \"\"\"\n",
     "    # Step 1: Initial classification + conversion \n",
-    "    df, all_errors, col_types = classify_and_convert(df, patterns)\n",
+    "    df, all_errors = classify_and_convert(df, patterns)\n",
     "    # Step 2: LLM fixes any errors\n",
     "    if all_errors:\n",
     "        failed_cols=[]\n",
@@ -563,22 +560,29 @@
     "    Main function that gets called by the main router.\n",
     "    MUST take (user_query, df) and return df\n",
     "    \"\"\"\n",
-    "    \n",
     "    # TODO: Create helper docs (Reimplement with functions)\n",
     "    helper_docs = f\"\"\"\n",
     "    VARIABLES AVAILABLE\n",
     "    - patterns: a dict containing regex patterns in order to classify columns\n",
     "    contains patterns for: {\", \".join(patterns.keys())}\n",
-    "    sample patterns: {\", \".join(patterns.items()[:5])}\n",
+    "    sample patterns: {', '.join(list(patterns.values())[0:4])}\n",
     "\n",
     "    FUNCTIONS AVAILABLE:\n",
-    "    - classify_column(series,patterns)\n",
-    "    takes a series and classifies them based on dict of regex patterns in patterns\n",
-    "    - classify_object_columns(df, patterns)\n",
-    "    takes object columns from a df and classfies them with classify_column\n",
-    "    - classify_and_convert(df, patterns): \n",
-    "    takes df and runs classify_object_columns and attempts to convert them to numerical columns\n",
-    "    - object_conversion_with_llm(df, patterns): \n",
+    "    - col_type = classify_column(series,patterns)\n",
+    "    takes a singular column and a dict of regex patterns then classifies them \n",
+    "    returns a string, column type matched from patterns dict\n",
+    "\n",
+    "    - col_types = classify_object_columns(df, patterns)\n",
+    "    automatically takes object columns from a df and classfies them with classify_column\n",
+    "        returns \n",
+    "        - a dict of matched column names and its column types e.g. {{'Smoke everyday': 'percentage', 'Company Size': 'range'}}\n",
+    "    MAKE SURE TO PRINT TO SEE RESULTS\n",
+    "        \n",
+    "    - df = object_conversion_with_llm(df, patterns):\n",
+    "    runs the full pipline classify_and_convert and takes any remaining string values \n",
+    "    that couldn't be converted and gets llm to process and suggest numerical replacement values to convert column \n",
+    "    returns:\n",
+    "        -converted df\n",
     "    \"\"\"\n",
     "    \n",
     "    # Create message chain\n",
@@ -599,7 +603,7 @@
     "    Rules:\n",
     "    - Return only executable Python code, no explanations, no markdown blocks\n",
     "    - Use helper functions where possible\n",
-    "    - Store final result in 'result_df'\n",
+    "    - Store final result in 'df'\n",
     "    - No explanations, just code\n",
     "    \"\"\"))\n",
     "    messages.append(HumanMessage(content=f\"User request: {user_query}\"))\n",
@@ -608,7 +612,6 @@
     "    llm = ChatOpenAI(temperature=0, model_name=\"gpt-4o-mini\")\n",
     "    response = llm.invoke(messages)\n",
     "    generated_code = response.content.strip()\n",
-    "    \n",
     "    # Execute code\n",
     "    try:\n",
     "        original_df = df.copy()\n",
@@ -631,107 +634,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 139,
    "id": "fcac110f",
    "metadata": {},
    "outputs": [],
    "source": [
     "# df = pd.read_csv(\"../sample_data/smoke.csv\")[0:5000]\n",
-    "df = pd.read_csv(\"../sample_data/Life Expectancy Data.csv\")[0:5000]"
+    "df = pd.read_csv(\"../sample_data/smoke.csv\")[0:5000]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
-   "id": "ee57e777",
+   "execution_count": 142,
+   "id": "63e2ea4e",
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "No patterns detected\n"
+      "{'Smoke everyday': 'percentage', 'Smoke some days': 'percentage', 'Former smoker': 'percentage', 'Never smoked': 'percentage'}\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "(          Country  Year      Status  Life expectancy   Adult Mortality  \\\n",
-       " 0     Afghanistan  2015  Developing              65.0            263.0   \n",
-       " 1     Afghanistan  2014  Developing              59.9            271.0   \n",
-       " 2     Afghanistan  2013  Developing              59.9            268.0   \n",
-       " 3     Afghanistan  2012  Developing              59.5            272.0   \n",
-       " 4     Afghanistan  2011  Developing              59.2            275.0   \n",
-       " ...           ...   ...         ...               ...              ...   \n",
-       " 2933     Zimbabwe  2004  Developing              44.3            723.0   \n",
-       " 2934     Zimbabwe  2003  Developing              44.5            715.0   \n",
-       " 2935     Zimbabwe  2002  Developing              44.8             73.0   \n",
-       " 2936     Zimbabwe  2001  Developing              45.3            686.0   \n",
-       " 2937     Zimbabwe  2000  Developing              46.0            665.0   \n",
-       " \n",
-       "       infant deaths  Alcohol  percentage expenditure  Hepatitis B  Measles   \\\n",
-       " 0                62     0.01               71.279624         65.0      1154   \n",
-       " 1                64     0.01               73.523582         62.0       492   \n",
-       " 2                66     0.01               73.219243         64.0       430   \n",
-       " 3                69     0.01               78.184215         67.0      2787   \n",
-       " 4                71     0.01                7.097109         68.0      3013   \n",
-       " ...             ...      ...                     ...          ...       ...   \n",
-       " 2933             27     4.36                0.000000         68.0        31   \n",
-       " 2934             26     4.06                0.000000          7.0       998   \n",
-       " 2935             25     4.43                0.000000         73.0       304   \n",
-       " 2936             25     1.72                0.000000         76.0       529   \n",
-       " 2937             24     1.68                0.000000         79.0      1483   \n",
-       " \n",
-       "       ...  Polio  Total expenditure  Diphtheria    HIV/AIDS         GDP  \\\n",
-       " 0     ...    6.0               8.16         65.0        0.1  584.259210   \n",
-       " 1     ...   58.0               8.18         62.0        0.1  612.696514   \n",
-       " 2     ...   62.0               8.13         64.0        0.1  631.744976   \n",
-       " 3     ...   67.0               8.52         67.0        0.1  669.959000   \n",
-       " 4     ...   68.0               7.87         68.0        0.1   63.537231   \n",
-       " ...   ...    ...                ...          ...        ...         ...   \n",
-       " 2933  ...   67.0               7.13         65.0       33.6  454.366654   \n",
-       " 2934  ...    7.0               6.52         68.0       36.7  453.351155   \n",
-       " 2935  ...   73.0               6.53         71.0       39.8   57.348340   \n",
-       " 2936  ...   76.0               6.16         75.0       42.1  548.587312   \n",
-       " 2937  ...   78.0               7.10         78.0       43.5  547.358878   \n",
-       " \n",
-       "       Population   thinness  1-19 years   thinness 5-9 years  \\\n",
-       " 0     33736494.0                   17.2                 17.3   \n",
-       " 1       327582.0                   17.5                 17.5   \n",
-       " 2     31731688.0                   17.7                 17.7   \n",
-       " 3      3696958.0                   17.9                 18.0   \n",
-       " 4      2978599.0                   18.2                 18.2   \n",
-       " ...          ...                    ...                  ...   \n",
-       " 2933  12777511.0                    9.4                  9.4   \n",
-       " 2934  12633897.0                    9.8                  9.9   \n",
-       " 2935    125525.0                    1.2                  1.3   \n",
-       " 2936  12366165.0                    1.6                  1.7   \n",
-       " 2937  12222251.0                   11.0                 11.2   \n",
-       " \n",
-       "       Income composition of resources  Schooling  \n",
-       " 0                               0.479       10.1  \n",
-       " 1                               0.476       10.0  \n",
-       " 2                               0.470        9.9  \n",
-       " 3                               0.463        9.8  \n",
-       " 4                               0.454        9.5  \n",
-       " ...                               ...        ...  \n",
-       " 2933                            0.407        9.2  \n",
-       " 2934                            0.418        9.5  \n",
-       " 2935                            0.427       10.0  \n",
-       " 2936                            0.427        9.8  \n",
-       " 2937                            0.434        9.8  \n",
-       " \n",
-       " [2938 rows x 22 columns],\n",
-       " [])"
-      ]
-     },
-     "execution_count": 121,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "object_conversion_with_llm(df, patterns)"
+    "# Sample Queries:\n",
+    "# 1. classify columns\n",
+    "test_df = pattern_matching(df, \"Detect formatting issues\")"
    ]
   }
  ],
