--- a/features/encoder.ipynb
+++ b/features/encoder.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": null,
    "id": "ff1f7555",
    "metadata": {},
    "outputs": [],
@@ -32,8 +32,6 @@
     "# Get API Key\n",
     "import os\n",
     "from dotenv import load_dotenv\n",
-    "from sklearn.preprocessing import LabelEncoder\n",
-    "\n",
     "load_dotenv()\n",
     "OPENAI_API_KEY = os.environ.get(\"OPENAI_API_KEY\")\n",
     "if not OPENAI_API_KEY:\n",
@@ -42,9 +40,6 @@
     "# Import libraries\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import math\n",
-    "import re\n",
-    "import datetime\n",
     "from sklearn import preprocessing, impute\n",
     "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
@@ -57,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 3,
    "id": "881f15c2",
    "metadata": {},
    "outputs": [],
@@ -65,12 +60,10 @@
     "def one_hot_encode(df, user_query):\n",
     "    \"\"\"\n",
     "    Function to one-hot encode categorical columns in a DataFrame.\n",
-    "    user_query: string describing what to encode (optional, just for uniformity)\n",
     "    df: pandas DataFrame\n",
     "    Returns a new DataFrame with categorical columns one-hot encoded.\n",
     "    \"\"\"\n",
     "\n",
-    "    \n",
     "    # Detect categorical columns automatically\n",
     "    categorical_cols = df.select_dtypes(include=['object', 'category']).columns.tolist()\n",
     "    \n",
@@ -84,22 +77,19 @@
     "    df_encoded = pd.get_dummies(df, columns=categorical_cols, drop_first=False)\n",
     "    \n",
     "    print(f\"New DataFrame shape after encoding: {df_encoded.shape}\")\n",
-    "    return df_encoded\n"
+    "    return df_encoded"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 4,
    "id": "e9b4376c",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "def label_encode(df, user_query):\n",
-    "\n",
+    "def label_encode(df):\n",
     "    \"\"\"\n",
     "    Function to label encode categorical columns in a DataFrame.\n",
-    "    user_query: string describing what to encode (optional, just for uniformity)\n",
     "    df: pandas DataFrame\n",
     "    Returns a new DataFrame with categorical columns label-encoded.\n",
     "    \"\"\"\n",
@@ -191,11 +181,19 @@
     "        print(f\"Generated Code:{generated_code}\")\n",
     "        return original_df\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8422802b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "data-cleaning-agent",
    "language": "python",
    "name": "python3"
   },
@@ -209,7 +207,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.13"
   }
  },
  "nbformat": 4,
