--- a/features/missing_vals.ipynb
+++ b/features/missing_vals.ipynb
@@ -231,18 +231,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": null,
    "id": "b1082194",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../sample_data/household_vista_2023_2024.csv\")\n",
-    "test_df = df.copy()"
+    "# df = pd.read_csv(\"../sample_data/household_vista_2023_2024.csv\")\n",
+    "# test_df = df.copy()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 73,
+   "execution_count": null,
    "id": "2c684d24",
    "metadata": {},
    "outputs": [
@@ -255,7 +255,7 @@
     }
    ],
    "source": [
-    "test_df = missing_vals(df, \"How should i deal with it\")"
+    "# test_df = missing_vals(df, \"How should i deal with it\")"
    ]
   }
  ],
