--- a/features/pattern_matching.ipynb
+++ b/features/pattern_matching.ipynb
@@ -325,14 +325,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 182,
+   "execution_count": 256,
    "id": "cc960094",
    "metadata": {},
    "outputs": [],
    "source": [
     "# df = pd.read_csv(\"../sample_data/smoke.csv\")[0:5000]\n",
-    "df = pd.read_csv(\"../sample_data/smoke.csv\")[0:5000]\n",
-    "test_df = df.copy()"
+    "# df = pd.read_csv(\"../sample_data/smoke.csv\")[0:5000]\n",
+    "# test_df = df.copy()"
    ]
   }
  ],
