--- a/features/structural_errors.ipynb
+++ b/features/structural_errors.ipynb
@@ -266,7 +266,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def pattern_matching(df, user_query):\n",
+    "def structural_errors(df, user_query):\n",
     "    \"\"\"\n",
     "    Main function that gets called by the main router.\n",
     "    MUST take (df, user_query) and return df\n",
@@ -284,7 +284,7 @@
     "    messages = []\n",
     "    messages.append(SystemMessage(content=f\"\"\"{llm_classify_patterns(df)}\"\"\"))\n",
     "    messages.append(SystemMessage(content=f\"\"\"\n",
-    "    You are a data cleaning agent trying to clean any patterns.\n",
+    "    You are a data cleaning agent handling structural errors.\n",
     "    \n",
     "    Dataset info: Shape: {df.shape}, Sample: {df.head(3).to_string()}\n",
     "    \n",
