--- a/main.ipynb
+++ b/main.ipynb
@@ -184,7 +184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "5d628dfe",
    "metadata": {},
    "outputs": [],
@@ -192,7 +192,7 @@
     "# Import features (TODO: Add features as we develop)\n",
     "import import_ipynb\n",
     "from features.summaries import get_summaries\n",
-    "from features.pattern_matching import pattern_matching\n",
+    "from features.structural_errors import structural_errors\n",
     "from features.missing_vals import missing_vals"
    ]
   },
@@ -382,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 51,
    "id": "b59ec888",
    "metadata": {},
    "outputs": [
@@ -390,16 +390,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "df = pattern_matching(df, \"handle object columns, preprocessing, cleaning\")\n",
-      "df['State'] = df['State'].replace({'\\s+': ''}, regex=True)  # Remove any extra spaces\n",
-      "df['Smoke everyday'] = handle_numeric(df['Smoke everyday'])\n",
-      "df['Smoke some days'] = handle_numeric(df['Smoke some days'])\n",
-      "df['Former smoker'] = handle_numeric(df['Former smoker'])\n",
-      "df['Never smoked'] = handle_numeric(df['Never smoked'])\n",
+      "df = pattern_matching(df, \"handle object columns, preprocessing, cleaning, how to clean data\")\n",
+      "df['State'] = df['State'].replace({'\\s+': ''}, regex=True)  # Remove any extra spaces in State\n",
+      "df['Smoke everyday'] = handle_numeric(df['Smoke everyday'])  # Clean percentage column\n",
+      "df['Smoke some days'] = handle_numeric(df['Smoke some days'])  # Clean percentage column\n",
+      "df['Former smoker'] = handle_numeric(df['Former smoker'])  # Clean percentage column\n",
+      "df['Never smoked'] = handle_numeric(df['Never smoked'])  # Clean percentage column\n",
       "\n",
-      "print(\"Object columns have been preprocessed and cleaned. The 'State' column had extra spaces removed, and all percentage columns have been converted to numeric format for consistency.\")\n",
+      "print(\"Data cleaning completed. The 'State' column had extra spaces removed. All percentage columns have been converted to numeric format.\")\n",
       "numeric vals: Failed to clean 'twenty-threepoint6percent'\n",
-      "Object columns have been preprocessed and cleaned. The 'State' column had extra spaces removed, and all percentage columns have been converted to numeric format for consistency.\n"
+      "Data cleaning completed. The 'State' column had extra spaces removed. All percentage columns have been converted to numeric format.\n"
      ]
     },
     {
@@ -442,7 +442,7 @@
          "type": "float"
         }
        ],
-       "ref": "78c9f0b5-0f82-487a-917c-545d1953585b",
+       "ref": "f2a84ee9-c36a-48d9-a0dc-640da00784bc",
        "rows": [
         [
          "0",
@@ -1062,7 +1062,7 @@
        "[876 rows x 6 columns]"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 51,
      "metadata": {},
      "output_type": "execute_result"
     }
